# autonomous-race-car

./: README.md  jetracer_cam_mount_v1.SLDPRT  jetson_mounting board.SLDPRT
Arduino control node/ackermann_node/: ackermann_node.ino  ackermann_node_v2.ino  car_setup.h  encoder_h.h
Ros/controller/: CMakeLists.txt
Ros/controller/config/: config.yaml  variables.yaml
Ros/controller/launch/: car.launch  test.launch
Ros/controller/param/: setup.yaml
Ros/controller/rviz/: rvz_cfg.rviz
Ros/controller/src/: joy_car_publisher.py  mux_control.py  odom.py  wall_follow.py
Ros/custom_msgs/: CMakeLists.txt
Ros/custom_msgs/msg/: pid_msg.msg  velocity_msg.msg
Teensy Node/ackermann_node/: ackermann_node.ino  ackermann_node_v2.ino  car_setup.h  encoder_h.h
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/csm/misc/matlab/utils/: normAngle.m
catkin_ws/src/als_ros/rviz/: als_ros.rviz
catkin_ws/src/controller/: CMakeLists.txt  package.xml
catkin_ws/src/controller/config/: rviz_config.rviz
catkin_ws/src/controller/launch/: car.launch
catkin_ws/src/controller/launch/include/: amcl.launch  gmcl.launch  joy_node_launch.launch  purepursuit.launch  (+1 more)
catkin_ws/src/controller/maps/: hall_half_19082023.yaml  hall_room.yaml  map_15_08_2023.yaml
catkin_ws/src/controller/param/: ekf.yaml  setup.yaml  vesc.yaml
catkin_ws/src/controller/src/: coordinates.csv  coordinatesh.csv  follow_gap.py  joy_car_publisher.py  mux_control.py  path_gen.py  poseconv_node.cpp  wall_follow.py
catkin_ws/src/custom_msgs/: package.xml
catkin_ws/src/f110_pure_pursuit/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/f110_pure_pursuit/config/: config.yaml  rosconsole_config.conf
catkin_ws/src/f110_pure_pursuit/launch/: f110_pure_pursuit.launch
catkin_ws/src/f110_pure_pursuit/src/: pure_pursuit_node.cpp
catkin_ws/src/f110_reactive_methods/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/f110_reactive_methods/config/: config.yaml  rosconsole_config.conf
catkin_ws/src/f110_reactive_methods/launch/: follow_the_gap_node.launch  simulator.rviz
catkin_ws/src/f110_reactive_methods/src/: follow_the_gap.cpp
catkin_ws/src/f110_safety/: CMakeLists.txt  package.xml
catkin_ws/src/f110_safety/config/: config.yaml
catkin_ws/src/f110_safety/launch/: f110_safety.launch
catkin_ws/src/f110_safety/src/: safety_node.cpp
catkin_ws/src/gmcl/examples/: gmcl_diff.launch
catkin_ws/src/gmcl/src/: gmcl_node.cpp
catkin_ws/src/hector_slam/hector_compressed_map_transport/: CMakeLists.txt
catkin_ws/src/laser_scan_matcher_odometry/: CMakeLists.txt
catkin_ws/src/laser_scan_matcher_odometry/launch/: example.launch
catkin_ws/src/ldlidar_stl_ros/launch/: ld19.launch
catkin_ws/src/safety_node/: CMakeLists.txt  package.xml
catkin_ws/src/safety_node/config/: config.yaml
catkin_ws/src/safety_node/launch/: safety.launch
catkin_ws/src/safety_node/src/: safety.cpp
catkin_ws/src/witmotion_ros/config/: config.yml
catkin_ws/src/witmotion_ros/launch/: witmotion.launch
catkin_ws/src/witmotion_ros/witmotion-uart-qt/: .gitignore  .gitmodules  CMakeLists.txt  README.md
catkin_ws/src/witmotion_ros/witmotion-uart-qt/.github/workflows/: documentation.yml
catkin_ws/src/witmotion_ros/witmotion-uart-qt/cmake/: doxygen-generator.cmake
catkin_ws/src/witmotion_ros/witmotion-uart-qt/config/: Doxyfile.in  version.h.in
catkin_ws/src/witmotion_ros/witmotion-uart-qt/examples/wt31n/: calibration-standalone.cpp  witmotion-wt31n-uart-test.cpp
catkin_ws/src/witmotion_ros/witmotion-uart-qt/include/witmotion/: jy901-uart.h  message-enumerator.h  serial.h  types.h  util.h  wt31n-uart.h  wt901-uart.h
catkin_ws/src/witmotion_ros/witmotion-uart-qt/src/: jy901-control.cpp  jy901-uart.cpp  message-enumerator.cpp  serial.cpp  util.cpp  wt31n-control.cpp  wt31n-uart.cpp  wt901-control.cpp  wt901-uart.cpp
(+10 files in other folders)
